--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,18 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <scope>runtime</scope>
+    </dependency>
+
+    <!-- Datenbank -->
+    <dependency>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>            
+    </dependency>
+    
     <!-- Thymeleaf -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
