--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Tagebau
+
+# MySQL Verbindung
+spring.datasource.url=jdbc:mariadb://bessernichtessen.de:3306/tagebau?createDatabaseIfNotExist=true
+spring.datasource.username=tutor
+spring.datasource.password=tutor
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+Tabellen automatisch erzeugen
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
