Remove database username and password
Removed database credentials from application.properties for security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=Tagebau
 
 # MySQL Verbindung
 spring.datasource.url=jdbc:mariadb://bessernichtessen.de:3306/tagebau?createDatabaseIfNotExist=true
-spring.datasource.username=tutor
-spring.datasource.password=tutor
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-Tabellen automatisch erzeugen
+#Tabellen automatisch erzeugen
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
