--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,15 @@ spring.application.name=Tagebau
 
 # MySQL Verbindung
 spring.datasource.url=jdbc:mariadb://bessernichtessen.de:3306/tagebau?createDatabaseIfNotExist=true
-spring.datasource.username=tutor
-spring.datasource.password=tutor
+spring.datasource.username=${MARIA_DB_USERNAME}
+spring.datasource.password=${MARIA_DB_PASSWORD}
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+logging.level.org.hibernate.tool.schema=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
-Tabellen automatisch erzeugen
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+#Tabellen automatisch erzeugen
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+#Dialektangabe war zwischenzeitlich erforderlich, f\u00fchrt aber jetzt zu Exceptions bei ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
