um git endlich ruhigzustellen jetzt nochmal eingecheckt (nur Kommentar geändert)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ logging.level.org.hibernate.SQL=DEBUG
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
 
-#Dialektangabe war zwischenzeitlich erforderlich, f\u00fchrt aber jetzt zu Exceptions bei ddl-auto=update
+#Dialektangabe war zwischenzeitlich erforderlich, das führt aber jetzt zu Exceptions bei ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
