Shipping-Model wieder in betrieb genommen Repository-Klassen ebenfalls wiederbelebt, um daran im folgenden weiter zu arbeiten

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Tagebau
 
 # MySQL Verbindung
-spring.datasource.url=jdbc:mariadb://bessernichtessen.de:3306/tagebau?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/tagebau?createDatabaseIfNotExist=true
 spring.datasource.username=${MARIA_DB_USERNAME}
 spring.datasource.password=${MARIA_DB_PASSWORD}
 
