Alternatives Profil für H2-Datenbank zugefügt (anstelle von MariaDB)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=Tagebau
 
+# Datenbank-Auswahl
+# Standard: MariaDB (siehe Einstellungen unten)
+# Alternative H2: Profil "h2" aktivieren (siehe application-h2.properties)
+#   mvn spring-boot:run -Dspring-boot.run.profiles=h2
+#   oder: java -jar target/tagebau-*.jar --spring.profiles.active=h2
+
+
 # MySQL Verbindung
 spring.datasource.url=jdbc:mariadb://localhost:3306/tagebau?createDatabaseIfNotExist=true
 spring.datasource.username=${MARIA_DB_USERNAME}
