H2-properties so geändert, dass es jetzt auch funktioniert

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -3,7 +3,7 @@ spring.application.name=Tagebau
 # H2 (lokal, Datei-basiert)
 # Aktivieren mit:  mvn spring-boot:run -Dspring-boot.run.profiles=h2
 # oder:           java -jar target/tagebau-*.jar --spring.profiles.active=h2
-spring.datasource.url=jdbc:h2:file:./data/tagebau;AUTO_SERVER=TRUE;MODE=MariaDB;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:./data/tagebau;AUTO_SERVER=TRUE;MODE=MariaDB;DB_CLOSE_ON_EXIT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -16,3 +16,5 @@ logging.level.org.hibernate.tool.schema=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
